# playin

./: Cargo.toml  rust-toolchain.toml
pallets/notes/: Cargo.toml
pallets/notes/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: fixed_fee.rs
runtime/tests/: fixed_fee.rs
