[package]
name = "pallet-notes"
version = "0.1.0"
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info          = { workspace = true, default-features = false, features = ["derive"] }
frame-support       = { workspace = true, default-features = false }
frame-system        = { workspace = true, default-features = false }
sp-std              = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-std/std",
]
